Eliminated compile warnings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "th-widget-folks-client",
+  "name": "the-widget-folks-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
